--- a/Manster/assets/AssetManifest.json
+++ b/Manster/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/icon.png":["assets/images/icon.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/icon.png":["assets/images/icon.png"],"assets/images/showcase.jpg":["assets/images/showcase.jpg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
